--- a/src/app/pages/graficos1/graficos1.component.html
+++ b/src/app/pages/graficos1/graficos1.component.html
@@ -1,1 +1,40 @@
-<p>graficos1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-grafico-doughnut [doughnutChartLabels]="graficos.grafico1.labels" [doughnutChartData]="graficos.grafico1.data" [doughnutChartType]="graficos.grafico1.type" [leyenda]="graficos.grafico1.leyenda"></app-grafico-doughnut>
+
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-grafico-doughnut [doughnutChartLabels]="graficos.grafico2.labels" [doughnutChartData]="graficos.grafico2.data" [doughnutChartType]="graficos.grafico2.type" [leyenda]="graficos.grafico2.leyenda"></app-grafico-doughnut>
+
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-grafico-doughnut [doughnutChartLabels]="graficos.grafico3.labels" [doughnutChartData]="graficos.grafico3.data" [doughnutChartType]="graficos.grafico3.type" [leyenda]="graficos.grafico3.leyenda"></app-grafico-doughnut>
+
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-grafico-doughnut [doughnutChartLabels]="graficos.grafico4.labels" [doughnutChartData]="graficos.grafico4.data" [doughnutChartType]="graficos.grafico4.type" [leyenda]="graficos.grafico4.leyenda"></app-grafico-doughnut>
+
+            </div>
+        </div>
+    </div>
+</div>
