--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -10,21 +10,31 @@
                 <li class="user-profile">
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img src="assets/images/users/profile.png" alt="user" /><span class="hide-menu">Steave Jobs </span></a>
                     <ul aria-expanded="false" class="collapse">
-                        <li><a href="javascript:void()">My Profile </a></li>
-                        <li><a href="javascript:void()">My Balance</a></li>
-                        <li><a href="javascript:void()">Inbox</a></li>
-                        <li><a href="javascript:void()">Account Setting</a></li>
-                        <li><a href="javascript:void()">Logout</a></li>
+
+                        <!-- Para que funcionen los routerLink hay que importarlo en el módulo de shared -->
+                        <li><a routerLinkActive="active" routerLink="javascript:void()">My Profile </a>
+                        </li>
+                        <li><a routerLinkActive="active" routerLink="javascript:void()">My Balance</a>
+                        </li>
+                        <li><a routerLinkActive="active" routerLink="/graficos1">Graficos</a>
+                        </li>
+                        <li><a routerLinkActive="active" routerLink="/account-settings">Account Setting</a>
+                        </li>
+                        <li><a routerLink="/login">Logout</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="nav-devider"></li>
                 <li class="nav-small-cap">PERSONAL</li>
-                <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Dashboard <span class="label label-rouded label-themecolor pull-right">4</span></span></a>
+
+                <li *ngFor="let menu of sidebarService.menu">
+                    <a class="has-arrow waves-effect waves-dark" aria-expanded="false">
+                        <i [class]="menu.icono"></i><span class="hide-menu">{{ menu.titulo }} <span class="label label-rouded label-themecolor pull-right">{{ menu.submenu.length }}</span></span>
+                    </a>
                     <ul aria-expanded="false" class="collapse">
-                        <li><a href="index.html">Minimal </a></li>
-                        <li><a href="index2.html">Analytical</a></li>
-                        <li><a href="index3.html">Demographical</a></li>
-                        <li><a href="index4.html">Modern</a></li>
+
+                        <!-- usamos llaves cuadradas porque más adelante puede que enviemos propiedades con la url como arreglo -->
+                        <li *ngFor="let submenu of menu.submenu"><a routerLinkActive="active" [routerLink]="['submenu.url']">{{ submenu.titulo }} </a></li>
                     </ul>
                 </li>
             </ul>
