Implmentar login y registro de usuarios en el Front-end

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 #themecolors a {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+.pointer {
+  cursor: pointer;
 }
