--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,52 +2,52 @@
 <!-- Left Sidebar - style you can find in sidebar.scss  -->
 <!-- ============================================================== -->
 <aside class="left-sidebar">
-    <!-- Sidebar scroll-->
-    <div class="scroll-sidebar">
-        <!-- Sidebar navigation-->
-        <nav class="sidebar-nav">
-            <ul id="sidebarnav">
-                <li class="user-profile">
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img src="assets/images/users/profile.png" alt="user" /><span class="hide-menu">Steave Jobs </span></a>
-                    <ul aria-expanded="false" class="collapse">
+  <!-- Sidebar scroll-->
+  <div class="scroll-sidebar">
+    <!-- Sidebar navigation-->
+    <nav class="sidebar-nav">
+      <ul id="sidebarnav">
+        <li class="user-profile">
+          <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img src="assets/images/users/profile.png" alt="user" /><span class="hide-menu">Steave Jobs </span></a>
+          <ul aria-expanded="false" class="collapse">
 
-                        <!-- Para que funcionen los routerLink hay que importarlo en el módulo de shared -->
-                        <li>
-                            <a routerLinkActive="active" routerLink="javascript:void()">My Profile </a>
-                        </li>
-                        <li>
-                            <a routerLinkActive="active" routerLink="javascript:void()">My Balance</a>
-                        </li>
-                        <li>
-                            <a routerLinkActive="active" routerLink="/account-settings">Account Setting</a>
-                        </li>
-                        <li>
-                            <a routerLink="/login">Logout</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-devider"></li>
-                <li class="nav-small-cap">PERSONAL</li>
+            <!-- Para que funcionen los routerLink hay que importarlo en el módulo de shared -->
+            <li>
+              <a routerLinkActive="active" routerLink="javascript:void()">My Profile </a>
+            </li>
+            <li>
+              <a routerLinkActive="active" routerLink="javascript:void()">My Balance</a>
+            </li>
+            <li>
+              <a routerLinkActive="active" routerLink="/account-settings">Account Setting</a>
+            </li>
+            <li>
+              <a (click)="usuarioService.logout()" class="pointer">Logout</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-devider"></li>
+        <li class="nav-small-cap">PERSONAL</li>
 
-                <li *ngFor="let menu of sidebarService.menu">
-                    <a class="has-arrow waves-effect waves-dark" aria-expanded="false">
-                        <i [class]="menu.icono"></i><span class="hide-menu">{{ menu.titulo }} <span class="label label-rouded label-themecolor pull-right">{{ menu.submenu.length }}</span></span>
-                    </a>
-                    <ul aria-expanded="false" class="collapse">
+        <li *ngFor="let menu of sidebarService.menu">
+          <a class="has-arrow waves-effect waves-dark" aria-expanded="false">
+            <i [class]="menu.icono"></i><span class="hide-menu">{{ menu.titulo }} <span class="label label-rouded label-themecolor pull-right">{{ menu.submenu.length }}</span></span>
+          </a>
+          <ul aria-expanded="false" class="collapse">
 
-                        <!-- usamos llaves cuadradas porque más adelante puede que enviemos propiedades con la url como arreglo -->
-                        <li *ngFor="let submenu of menu.submenu">
-                            <!-- <a routerLinkActive="active" [routerLink]="['submenu.url']">{{ submenu.titulo }} </a> -->
-                            <a routerLinkActive="active" routerLink="{{submenu.url}}">{{ submenu.titulo }}</a>
-                        </li>
+            <!-- usamos llaves cuadradas porque más adelante puede que enviemos propiedades con la url como arreglo -->
+            <li *ngFor="let submenu of menu.submenu">
+              <!-- <a routerLinkActive="active" [routerLink]="['submenu.url']">{{ submenu.titulo }} </a> -->
+              <a routerLinkActive="active" routerLink="{{submenu.url}}">{{ submenu.titulo }}</a>
+            </li>
 
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-        <!-- End Sidebar navigation -->
-    </div>
-    <!-- End Sidebar scroll-->
+          </ul>
+        </li>
+      </ul>
+    </nav>
+    <!-- End Sidebar navigation -->
+  </div>
+  <!-- End Sidebar scroll-->
 </aside>
 <!-- ============================================================== -->
 <!-- End Left Sidebar - style you can find in sidebar.scss  -->
