--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -8,12 +8,20 @@
     <nav class="sidebar-nav">
       <ul id="sidebarnav">
         <li class="user-profile">
-          <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img src="assets/images/users/profile.png" alt="user" /><span class="hide-menu">Steave Jobs </span></a>
+
+          <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
+            <div class="row d-flex align-items-center">
+              <div class="col-2"><img [src]="usuarioService.usuario.img | imagen" alt="user" /></div>
+              <div class="col-10">
+                <div class="hide-menu small">{{ usuarioService.usuario.nombre }}</div>
+              </div>
+            </div>
+          </a>
           <ul aria-expanded="false" class="collapse">
 
             <!-- Para que funcionen los routerLink hay que importarlo en el módulo de shared -->
             <li>
-              <a routerLinkActive="active" routerLink="javascript:void()">My Profile </a>
+              <a routerLinkActive="active" routerLink="/profile">My Profile </a>
             </li>
             <li>
               <a routerLinkActive="active" routerLink="javascript:void()">My Balance</a>
@@ -22,7 +30,7 @@
               <a routerLinkActive="active" routerLink="/account-settings">Account Setting</a>
             </li>
             <li>
-              <a (click)="usuarioService.logout()" class="pointer">Logout</a>
+              <a (click)="usuarioService.logout()" href="#" class="pointer">Logout</a>
             </li>
           </ul>
         </li>
