Mantenimiento de Usuarios y modal de carga de imágenes

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -48,3 +48,9 @@
     <!-- ============================================================== -->
 
 </div>
+
+<!-- ============================================================== -->
+<!-- Modal image upload -->
+<!-- ============================================================== -->
+
+<app-modal-upload></app-modal-upload>
