--- a/src/app/pages/medicos/medicos.component.html
+++ b/src/app/pages/medicos/medicos.component.html
@@ -1,1 +1,71 @@
-<p>medicos works!</p>
+<div class="row animated fadeIn">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+
+                <input #input type="text" class="form-control" placeholder="Buscar médico..." (keyup)="buscarMedico(input.value)">
+
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div *ngIf="cargando" class="row text-center animated fadeIn">
+
+    <div class="col-12">
+        <div class="alert alert-warning">
+            <strong>Cargando</strong>
+            <br>
+            <i class="fa fa-refresh fa-spin fa-2x mt-2"></i>
+            <br>
+            <span>Espere por favor</span>
+        </div>
+    </div>
+
+</div>
+
+<div *ngIf="!cargando" class="row animated fadeIn">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+
+                <h3 class="card-title">{{ titulo }} (<small>{{ totalRegistros }}</small>)</h3>
+
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th class="w70">Imagen</th>
+                            <th>Nombre</th>
+                            <th>Hospital</th>
+                            <th class="w200 text-center">
+                                <button [routerLink]="['/medico', 'nuevo']" class="btn btn-success btn-sm mr-1"><i class="fa fa-hospital-o"></i> Crear</button>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let medico of medicos">
+                            <td class="align-middle text-center">
+                                <img [src]="medico.img | imagen:'medicos'" class="h50">
+                            </td>
+                            <td class="align-middle">
+                                {{medico.nombre}}
+                            </td>
+                            <td class="align-middle">
+                                {{medico.hospital.nombre}}
+                            </td>
+                            <td class="align-middle text-center w200">
+                                <button [routerLink]="['/medico', medico._id]" class="btn btn-primary btn-sm mr-1"><i class="fa fa-edit"></i> Editar</button>
+                                <button class="btn btn-danger btn-sm" (click)="borrarMedico( medico )"><i class="fa fa-trash"></i> Delete</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <button class="btn btn-seconday mr-2" (click)="cambiarDesde(-5)">Previous</button>
+                <button class="btn btn-seconday" (click)="cambiarDesde(5)">Next</button>
+
+            </div>
+        </div>
+    </div>
+</div>
