--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,60 +2,60 @@
 <!-- Left Sidebar - style you can find in sidebar.scss  -->
 <!-- ============================================================== -->
 <aside class="left-sidebar">
-  <!-- Sidebar scroll-->
-  <div class="scroll-sidebar">
-    <!-- Sidebar navigation-->
-    <nav class="sidebar-nav">
-      <ul id="sidebarnav">
-        <li class="user-profile">
+    <!-- Sidebar scroll-->
+    <div class="scroll-sidebar">
+        <!-- Sidebar navigation-->
+        <nav class="sidebar-nav animated bounceInDown">
+            <ul id="sidebarnav">
+                <li class="user-profile">
 
-          <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-            <div class="row d-flex align-items-center">
-              <div class="col-2"><img [src]="usuarioService.usuario.img | imagen" alt="user" /></div>
-              <div class="col-10">
-                <div class="hide-menu small">{{ usuarioService.usuario.nombre }}</div>
-              </div>
-            </div>
-          </a>
-          <ul aria-expanded="false" class="collapse">
+                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-2"><img [src]="usuarioService.usuario.img | imagen" alt="user" /></div>
+                            <div class="col-10">
+                                <div class="hide-menu small">{{ usuarioService.usuario.nombre }}</div>
+                            </div>
+                        </div>
+                    </a>
+                    <ul aria-expanded="false" class="collapse">
 
-            <!-- Para que funcionen los routerLink hay que importarlo en el módulo de shared -->
-            <li>
-              <a routerLinkActive="active" routerLink="/profile">My Profile </a>
-            </li>
-            <li>
-              <a routerLinkActive="active" routerLink="javascript:void()">My Balance</a>
-            </li>
-            <li>
-              <a routerLinkActive="active" routerLink="/account-settings">Account Setting</a>
-            </li>
-            <li>
-              <a (click)="usuarioService.logout()" href="#" class="pointer">Logout</a>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-devider"></li>
-        <li class="nav-small-cap">PERSONAL</li>
+                        <!-- Para que funcionen los routerLink hay que importarlo en el módulo de shared -->
+                        <li>
+                            <a routerLinkActive="active" routerLink="/profile">My Profile </a>
+                        </li>
+                        <li>
+                            <a routerLinkActive="active" routerLink="javascript:void()">My Balance</a>
+                        </li>
+                        <li>
+                            <a routerLinkActive="active" routerLink="/account-settings">Account Setting</a>
+                        </li>
+                        <li>
+                            <a (click)="usuarioService.logout()" href="#" class="pointer">Logout</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-devider"></li>
+                <li class="nav-small-cap">PERSONAL</li>
 
-        <li *ngFor="let menu of sidebarService.menu">
-          <a class="has-arrow waves-effect waves-dark" aria-expanded="false">
-            <i [class]="menu.icono"></i><span class="hide-menu">{{ menu.titulo }} <span class="label label-rouded label-themecolor pull-right">{{ menu.submenu.length }}</span></span>
-          </a>
-          <ul aria-expanded="false" class="collapse">
+                <li *ngFor="let menu of sidebarService.menu">
+                    <a class="has-arrow waves-effect waves-dark" aria-expanded="false">
+                        <i [class]="menu.icono"></i><span class="hide-menu">{{ menu.titulo }} <span class="label label-rouded label-themecolor pull-right">{{ menu.submenu.length }}</span></span>
+                    </a>
+                    <ul aria-expanded="false" class="collapse">
 
-            <!-- usamos llaves cuadradas porque más adelante puede que enviemos propiedades con la url como arreglo -->
-            <li *ngFor="let submenu of menu.submenu">
-              <!-- <a routerLinkActive="active" [routerLink]="['submenu.url']">{{ submenu.titulo }} </a> -->
-              <a routerLinkActive="active" routerLink="{{submenu.url}}">{{ submenu.titulo }}</a>
-            </li>
+                        <!-- usamos llaves cuadradas porque más adelante puede que enviemos propiedades con la url como arreglo -->
+                        <li *ngFor="let submenu of menu.submenu">
+                            <!-- <a routerLinkActive="active" [routerLink]="['submenu.url']">{{ submenu.titulo }} </a> -->
+                            <a routerLinkActive="active" routerLink="{{submenu.url}}">{{ submenu.titulo }}</a>
+                        </li>
 
-          </ul>
-        </li>
-      </ul>
-    </nav>
-    <!-- End Sidebar navigation -->
-  </div>
-  <!-- End Sidebar scroll-->
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <!-- End Sidebar navigation -->
+    </div>
+    <!-- End Sidebar scroll-->
 </aside>
 <!-- ============================================================== -->
 <!-- End Left Sidebar - style you can find in sidebar.scss  -->
